# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: audit.yml  general.yml
.sqlx/: query-4cde57d878861018b438997d8f932867dd879742adc4314aad81f2bd0aa11dd7.json
migrations/: 20231212164010_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
