[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Malibongwe Gumede <malib2027@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
config = { version = "0.13.4", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.10.1"
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
reqwest = "0.11.22"
